--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
                         <img src="assets/story-2.png" alt="">
                     </div>
                     <button class="new-1">November 19, 2019</button>
-                    <P class="none-3">Find out if a school fits the
+                    <P>Find out if a school fits the
                         family’s needs</P>
                 </div>
                 <div>
                     
                     <img src="assets/story-3.png" alt="">
                     <button class="new-2">November 19, 2019</button>
-                    <p class="none-3">Summer math & literacy
+                    <p>Summer math & literacy
                         centres for kids</p>
                 </div>
                 <div>
@@ -132,7 +132,7 @@
                 <div>
                     <img src="assets/story-5.png" alt="">
                     <button class="new-4">July 19, 2019</button>
-                    <p class="none-3">Conversation rhymes
+                    <p>Conversation rhymes
                         improve kids listening</p>
                 </div>
 
@@ -146,6 +146,34 @@
 
     </main>
     <footer>
+        <div class="foot-left">
+            <div class="foot-left-h">
+                <img src="assets/logo.png" alt="">
+                <p>Kids Education</p>
+            </div>
+            <p>
+                Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.
+            </p>
+        </div>
+        <div class="footer-mid">
+            <p>About School</p>
+            <div>
+
+                <li>Home</li>
+                <li>About</li>
+                <li>Faciliteis</li>
+                <li>Admission</li>
+            </div>
+        </div>
+        <div class="footer-right">
+            <p>Keep In Touch</p>
+            <div>
+                <img src="assets/google+.png" alt="">
+                <img src="assets/twitter.png" alt="">
+                <img src="assets/dribble.png" alt="">
+                <img src="assets/fb.png" alt="">
+            </div>
+        </div>
 
 
 
